# libliveconnect

./: CMakeLists.txt  README.md
.github/workflows/: clang-tidy.yml
include/liveconnect/: liveconnect.hpp
src/: liveconnect.cpp
tests/: test_liveconnect.cpp
